2013-09-07 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* auxiliary/mergeWholeExpFile.m: this function merges biotek plate reader data into one object (by calculating mean std for each data field, e.g. rates,endtime,rawdata)
2013-09-04 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* modules/paramest/parameter_estimation_patternsearch.m: added, initial parameter value perturbation. Number of initial paramter vectors can be generated with latin hypercube sampling. 
2013-08-30 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* auxiliary/parseGetEqOutput.m: bugfix, simbiology's getequation output can have more initial values than state variables, that leads to error in ode15s() function. A simple check looks for initial values with state equtions.
	* core/txtl_plot.m: built in check to recognize simdata object when the function is called with 3 aruments txtl_plot(t,x,Mobj) vs txtl_(simData,Mobj,dataGroups).
2013-08-28 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* doc/Makefile: makefile for the usersmanual, thanks to SCL
2013-08-26 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* examples/incoherent_ff_loop_function.m: function for of the IFFL for rapid testing exp conditions. + example file
2013-08-25 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* tests/test_basic_examples.m: test file to test basic functionality through example files
	* core/findspecies.m: finding species within complexes 3rd arugment: withinComplex, used for calculate totel concentration of species.
	* auxiliary/findStringInAList.m: substring search to find all instances of the searched string within strings
	* core/txtl_getDefaultPlotDataStruct.m: creates a default data struct for txtl_plot
	* core/txtl_plot.m: refactoring to accommodate the new plot data struct
	* core/txtl_setup_new_protein_added.m: in Matlab 2013a the implementation of union has changed, list comparison is modified accordingly